--- a/blog.html
+++ b/blog.html
@@ -469,7 +469,7 @@
                     <li><a href="blog.html" class="active" aria-current="page">Blog</a></li> 
                     <li><a href="foro.html">Foros</a></li> 
                     <li><a href="memes.html">Memes</a></li> 
-                    <li><a href="podcast.html">Podcast</a></li> <!-- Added Podcast Link -->
+                    <li><a href="podcast.html">Podcast</a></li>
                 </ul>
             </nav>
         </div>
@@ -602,7 +602,7 @@
                         <li><a href="foro.html">Foros</a></li> 
                         <li><a href="memes.html">Memes</a></li> 
                         <li><a href="podcast.html">Podcast</a></li>
-                        <li><a href="politicas.html">Políticas</a></li> <!-- Added Políticas Link -->
+                        <li><a href="politicas.html">Políticas</a></li>
                     </ul>
                 </div>
                 
@@ -733,4 +733,4 @@
         });
     </script>
 </body>
-</html>
+</ht
