--- a/blog.html
+++ b/blog.html
@@ -190,7 +190,7 @@
             font-family: 'Playfair Display', serif; 
             font-size: 3rem; 
             font-weight: 700; 
-            color: var(--secondary-cyan); /* Changed from --accent-cyan to --secondary-cyan for consistency */
+            color: var(--secondary-cyan); 
             margin-bottom: 0.5rem;
             text-transform: none; 
             letter-spacing: 0.5px; 
@@ -262,17 +262,17 @@
         }
 
         .blog-post-content h3 {
-            font-family: 'Playfair Display', serif; /* Changed Font */
-            font-size: 1.6rem; /* Adjusted size for new font */
+            font-family: 'Playfair Display', serif; 
+            font-size: 1.6rem; 
             color: var(--accent-yellow);
             margin-bottom: 1rem;
-            line-height: 1.4; /* Adjusted line height */
+            line-height: 1.4; 
             transition: color 0.3s ease, text-shadow 0.3s ease; 
         }
         .blog-post-content h3:hover {
             color: var(--accent-cyan);
             text-shadow: 0 0 8px var(--accent-cyan);
-            font-family: 'Krona One', sans-serif; /* Kept Krona for hover, or change if desired */
+            font-family: 'Krona One', sans-serif; 
         }
         
         .blog-post-meta {
@@ -432,7 +432,7 @@
             nav a { font-size: 0.8rem; padding: 7px 10px; }
             .page-header h2 { font-size: 2.6rem; } 
             .page-header h2 i { font-size: 2.2rem; } 
-            .blog-post-content h3 {font-size: 1.4rem;} /* Adjusted for new font */
+            .blog-post-content h3 {font-size: 1.4rem;} 
         }
         
         @media (max-width: 600px) {
@@ -445,7 +445,7 @@
             .page-header p { font-size: 1rem; }
             .blog-grid { grid-template-columns: 1fr; }
             .blog-post-thumbnail { height: 180px; }
-            .blog-post-content h3 {font-size: 1.3rem;} /* Adjusted for new font */
+            .blog-post-content h3 {font-size: 1.3rem;} 
             .blog-post-excerpt {font-size: 0.9rem;}
             .read-more-btn { padding: 8px 16px; font-size: 0.9rem;}
             .full-article-note { font-size: 0.75rem; }
