Adjust courses page layout

--- a/cursos.html
+++ b/cursos.html
@@ -196,16 +196,17 @@
         }
 
         .page-header h2 {
-            font-family: 'Playfair Display', serif; 
-            font-size: 3rem; 
-            font-weight: 700; 
-            color: var(--secondary-cyan); 
+            font-family: 'Playfair Display', serif;
+            font-size: 3rem;
+            font-weight: 700;
+            color: var(--secondary-cyan);
             margin-bottom: 0.5rem;
-            text-transform: none; 
-            letter-spacing: 0.5px; 
-            display: inline-flex; 
+            text-transform: none;
+            letter-spacing: 0.5px;
+            display: inline-flex;
             align-items: center;
-            gap: 15px; 
+            gap: 15px;
+            white-space: nowrap;
         }
 
         .page-header h2 i {
@@ -497,18 +498,6 @@
                     <p>Un enfoque creativo y visual para comprender y manejar el Trastorno Límite de la Personalidad, con un foco en DBT y CBT.</p>
                 </div>
                 
-                <div class="footer-column">
-                    <h3>Navegación</h3>
-                    <ul class="footer-links">
-                        <li><a href="index.html">Inicio</a></li> 
-                        <li><a href="cursos.html">Cursos</a></li> 
-                        <li><a href="blog.html">Blog</a></li> 
-                        <li><a href="foro.html">Foros</a></li> 
-                        <li><a href="memes.html">Memes</a></li> 
-                        <li><a href="podcast.html">Podcast</a></li>
-                        <li><a href="politicas.html">Políticas</a></li>
-                    </ul>
-                </div>
                 
                 <div class="footer-column">
                     <h3>Contacto</h3>
