Keep site title on one line

--- a/cursos.html
+++ b/cursos.html
@@ -115,9 +115,10 @@
             font-weight: 400;
             background: linear-gradient(45deg, var(--accent-magenta), var(--accent-yellow), var(--accent-blue));
             -webkit-background-clip: text; 
-            background-clip: text; 
+            background-clip: text;
             -webkit-text-fill-color: transparent;
-            letter-spacing: 2px; 
+            letter-spacing: 2px;
+            white-space: nowrap;
         }
         
         .logo i { 
