--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                     <li><a href="blog.html">Blog</a></li> 
                     <li><a href="foro.html">Foros</a></li> 
                     <li><a href="memes.html">Memes</a></li> 
-                    <li><a href="podcast.html">Podcasts</a></li>
+                    <li><a href="podcast.html">Podcast</a></li>
                 </ul>
             </nav>
         </div>
